--- a/lib/header/h-14/index.pug
+++ b/lib/header/h-14/index.pug
@@ -18,7 +18,7 @@ header.canhcam-header-14
 				li
 					span.link.phone
 						span.textinfo
-							strong 19001234
+							strong 1900 2671
 				li.d-flex.social
 					a(href="#") 
 						em.fab.fa-facebook-f
