--- a/lib/project-detail/p-5/index.pug
+++ b/lib/project-detail/p-5/index.pug
@@ -1,60 +1,132 @@
-section.canhcam-project_detail-5#canhcam-detail-section-5
+section.canhcam-project-detail-5#canhcam-detail-section-5
 	.container
-		h1.antuong-title.upcase.mb-4.mb-lg-5 tiến độ dự án
-		
-		.row
-			.col
-				.slidemonth
+		.slide
+			h1.antuong-title.upcase.mb-4.mb-lg-5 tiến độ dự án
+			
+			.row
+				.col
 					article.owl-carousel.carousel-1.owl-theme.list-items
-						
-							.item.click
-								h5 Tháng 1
-							.item
-								h5 Tháng 2
-							.item
-								h5 Tháng 3
-							.item
-								h5 Tháng 4
-							.item
-								h5 Tháng 5
-							.item
-								h5 Tháng 6
-							.item
-								h5 Tháng 7
-							.item
-								h5 Tháng 8
-							.item
-								h5 Tháng 9
-							.item
-								h5 Tháng 10
-							.item
-								h5 Tháng 11
-							.item
-								h5 Tháng 12
-		.row
-			.col
-				article.owl-carousel.carousel-2.owl-theme.list-items
-					.item
-						img.img-fluid(src='./img/antuong/project_detail/detail_9.png')
-					.item
-						img.img-fluid(src='./img/antuong/project_detail/detail_9.png')
-					.item
-						img.img-fluid(src='./img/antuong/project_detail/detail_9.png')
-					.item
-						img.img-fluid(src='./img/antuong/project_detail/detail_9.png')
-					.item
-						img.img-fluid(src='./img/antuong/project_detail/detail_9.png')
-					.item
-						img.img-fluid(src='./img/antuong/project_detail/detail_9.png')
-					.item
-						img.img-fluid(src='./img/antuong/project_detail/detail_9.png')
-					.item
-						img.img-fluid(src='./img/antuong/project_detail/detail_9.png')
-					.item
-						img.img-fluid(src='./img/antuong/project_detail/detail_9.png')
-					.item
-						img.img-fluid(src='./img/antuong/project_detail/detail_9.png')
-					.item
-						img.img-fluid(src='./img/antuong/project_detail/detail_9.png')
-					.item
-						img.img-fluid(src='./img/antuong/project_detail/detail_9.png')
+						.item.active(data-to="1")
+							h5 Tháng 1
+						.item(data-to="2")
+							h5 Tháng 2
+						.item(data-to="3")
+							h5 Tháng 3
+						.item(data-to="4")
+							h5 Tháng 4
+						.item(data-to="5")
+							h5 Tháng 5
+						.item(data-to="6")
+							h5 Tháng 6
+						.item(data-to="7")
+							h5 Tháng 7
+						.item(data-to="8")
+							h5 Tháng 8
+						.item(data-to="9")
+							h5 Tháng 9
+						.item(data-to="10")
+							h5 Tháng 10
+						.item(data-to="11")
+							h5 Tháng 11
+						.item(data-to="12")
+							h5 Tháng 12
+					
+			.row
+				.col
+					article.carousel-2
+						.item.active(data-slider="1") 
+							.owl-carousel.owl-theme
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+						.item.active(data-slider="2") 
+							.owl-carousel.owl-theme
+								.itemc
+									img(src="./img/antuong/project_detail/detail_6.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+						.item.active(data-slider="3") 
+							.owl-carousel.owl-theme
+								.itemc
+									img(src="./img/antuong/project_detail/detail_4.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+						.item.active(data-slider="4") 
+							.owl-carousel.owl-theme
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+						.item.active(data-slider="5") 
+							.owl-carousel.owl-theme
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+						.item.active(data-slider="6") 
+							.owl-carousel.owl-theme
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+						.item.active(data-slider="7") 
+							.owl-carousel.owl-theme
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+						.item.active(data-slider="8") 
+							.owl-carousel.owl-theme
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+						.item.active(data-slider="9") 
+							.owl-carousel.owl-theme
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+						.item.active(data-slider="10") 
+							.owl-carousel.owl-theme
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+						.item.active(data-slider="11") 
+							.owl-carousel.owl-theme
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+						.item.active(data-slider="12") 
+							.owl-carousel.owl-theme
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
+								.itemc
+									img(src="./img/antuong/project_detail/detail_9.png", alt="")
