--- a/lib/header/h-14/index.sass
+++ b/lib/header/h-14/index.sass
@@ -80,6 +80,7 @@
 						color: color-get($icon,youtube)
 						&:before
 							font-family: 'FontAwesome'
+							+fw(100)
 			&.button
 				a
 					+pad(1rem 2rem)
