--- a/templates/contact.pug
+++ b/templates/contact.pug
@@ -9,6 +9,7 @@ block header
 block body
 	include ../lib/contact/c-1/index.pug
 	include ../lib/form/f-1/index.pug
+	include ../lib/bonus/b-1/index.pug
 block footer
 	include ../lib/footer/f-1/index.pug
 	include ../lib/footer/f-7/index.pug
