--- a/lib/news-details/n-1/index.pug
+++ b/lib/news-details/n-1/index.pug
@@ -60,7 +60,7 @@ section.canhcam-news-details-1
 								figure
 									img(src="./img/news/img-01.png", alt="alt")
 									figcaption
-										time 12/12/2017
+										.time 12/12/2017
 										h3 golf-etc EXPANDS REFLECTIVE TECHNOLOGY
 										p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas a quidem quas autem sunt aspernatur accusamus, odit delectus ex explicabo accusantium totam nihil expedita consectetur officia ea recusandae iure debitis.
 
@@ -68,7 +68,7 @@ section.canhcam-news-details-1
 								figure
 									img(src="./img/news/img-01.png", alt="alt")
 									figcaption
-										time 12/12/2017
+										.time 12/12/2017
 										h3 golf-etc EXPum dolor sit amet consecteANDS REFLECTIVE TECHNOLOGY
 										p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas a quidem quas autem sunt aspernatur accusamus, odit delectus ex explicabo accusantium totam nihil expedita consectetur officia ea recusandae iure debitis.
 
@@ -76,7 +76,7 @@ section.canhcam-news-details-1
 								figure
 									img(src="./img/news/img-01.png", alt="alt")
 									figcaption
-										time 12/12/2017
+										.time 12/12/2017
 										h3 golf-etc EVE TECHNOLOGY
 										p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas a quidem quas autem sunt aspernatur accusamus, odit delectus ex explicabo accusantium totam nihil expedita consectetur officia ea recusandae iure debitis.
 
@@ -84,7 +84,7 @@ section.canhcam-news-details-1
 								figure
 									img(src="./img/news/img-01.png", alt="alt")
 									figcaption
-										time 12/12/2017
+										.time 12/12/2017
 										h3 golf-etcum dolor sit amet consecteum dolor sit amet consecte EXPANDS REFLECTIVE TECHNOLOGY
 										p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas a quidem quas autem sunt aspernatur accusamus, odit delectus ex explicabo accusantium totam nihil expedita consectetur officia ea recusandae iure debitis.
 
@@ -92,6 +92,6 @@ section.canhcam-news-details-1
 								figure
 									img(src="./img/news/img-01.png", alt="alt")
 									figcaption
-										time 12/12/2017
+										.time 12/12/2017
 										h3 golf-etc EXPANDS REFLECTIVE TECHNOLOGY
 										p Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas a quidem quas autem sunt aspernatur accusamus, odit delectus ex explicabo accusantium totam nihil expedita consectetur officia ea recusandae iure debitis.
