--- a/lib/information/i-1/index.pug
+++ b/lib/information/i-1/index.pug
@@ -33,7 +33,7 @@ section.canhcam-information-1
 								.form-checkbox.form-group
 									label Giới tính *
 									.sex
-										input.mx-4(type='radio', name='inlineRadioOptions', value='option2')
+										input.mr-4(type='radio', name='inlineRadioOptions', value='option2')
 										| Nam
 										input.mx-4(type='radio', name='inlineRadioOptions', value='option2')
 										| Nữ
