--- a/lib/nav/n-8/history.pug
+++ b/lib/nav/n-8/history.pug
@@ -4,6 +4,6 @@
 		a.item(href='./information.html') Thông tin cá nhân
 		a.item(href='./backet.html') Giỏ hàng
 		a.item.active(href='./history.html') Lịch sử giao dịch
-		a.item(href='#') Lịch sử thanh toán
+		a.item(href='./statistical.html') Báo cáo thông kê
 		a.item(href='#') Đổi mật khẩu
 		a.item(href='#') Hướng dẫn sử dụng
