--- a/lib/sale/s-1/index.sass
+++ b/lib/sale/s-1/index.sass
@@ -50,5 +50,4 @@ section.canhcam-sale-1
 		+bor-rad(5px)
 		+fw(400)
 		&:hover
-			background: color-get($mau,trang)
-			color: color-get($mau,extra)
+			background: darken(color-get($mau,extra),10%)
