--- a/templates/sale.pug
+++ b/templates/sale.pug
@@ -11,6 +11,7 @@ block body
 	include ../lib/nav/n-3/index.pug
 	include ../lib/sale/s-1/index.pug
 	include ../lib/sale/s-2/index.pug
+	include ../lib/sale/s-3/index.pug
 	include ../lib/pagination/p-1/index.pug
 	include ../lib/bonus/b-1/index.pug
 block footer
