--- a/templates/support.pug
+++ b/templates/support.pug
@@ -9,6 +9,7 @@ block header
 block body
 	include ../lib/breadcrumb/b-1/index.pug
 	include ../lib/nav/n-5/index.pug
+	include ../lib/support/s-1/index.pug
 	include ../lib/bonus/b-1/index.pug
 block footer
 	include ../lib/footer/f-1/index.pug
