--- a/lib/sale/s-2/index.pug
+++ b/lib/sale/s-2/index.pug
@@ -1,195 +1,19 @@
 section.canhcam-sale-2
 	.container
-		.row
-			.col-lg-4.col-md-6
-				a.item(href="#")
-					figure
-						.boxzoom
-							img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
-						figcaption
-							h5 Southgate Tower
-							p Địa chỉ: Quận 7, Hồ Chí Minh
-							p Giá: 
-								span 35 triệu - 36 triệu/m2
-						.status.d-flex
-							.info.d-flex
-								p
-									em.mr-2.fas.fa-expand-arrows-alt
-									| 90m
-									sup 2
-								p
-									em.mr-2.fas.fa-bed
-									| 2
-								p
-									em.mr-2.fas.fa-bath
-									| 2
-							span Xem thêm
-								em.lnr.lnr-arrow-right.ml-2
-			.col-lg-4.col-md-6
-				a.item(href="#")
-					figure
-						.boxzoom
-							img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
-						figcaption
-							h5 Southgate Tower
-							p Địa chỉ: Quận 7, Hồ Chí Minh
-							p Giá: 
-								span 35 triệu - 36 triệu/m2
-						.status.d-flex
-							.info.d-flex
-								p
-									em.mr-2.fas.fa-expand-arrows-alt
-									| 90m
-									sup 2
-								p
-									em.mr-2.fas.fa-bed
-									| 2
-								p
-									em.mr-2.fas.fa-bath
-									| 2
-							span Xem thêm
-								em.lnr.lnr-arrow-right.ml-2
-			.col-lg-4.col-md-6
-				a.item(href="#")
-					figure
-						.boxzoom
-							img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
-						figcaption
-							h5 Southgate Tower
-							p Địa chỉ: Quận 7, Hồ Chí Minh
-							p Giá: 
-								span 35 triệu - 36 triệu/m2
-						.status.d-flex
-							.info.d-flex
-								p
-									em.mr-2.fas.fa-expand-arrows-alt
-									| 90m
-									sup 2
-								p
-									em.mr-2.fas.fa-bed
-									| 2
-								p
-									em.mr-2.fas.fa-bath
-									| 2
-							span Xem thêm
-								em.lnr.lnr-arrow-right.ml-2
-			.col-lg-4.col-md-6
-				a.item(href="#")
-					figure
-						.boxzoom
-							img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
-						figcaption
-							h5 Southgate Tower
-							p Địa chỉ: Quận 7, Hồ Chí Minh
-							p Giá: 
-								span 35 triệu - 36 triệu/m2
-						.status.d-flex
-							.info.d-flex
-								p
-									em.mr-2.fas.fa-expand-arrows-alt
-									| 90m
-									sup 2
-								p
-									em.mr-2.fas.fa-bed
-									| 2
-								p
-									em.mr-2.fas.fa-bath
-									| 2
-							span Xem thêm
-								em.lnr.lnr-arrow-right.ml-2
-			.col-lg-4.col-md-6
-				a.item(href="#")
-					figure
-						.boxzoom
-							img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
-						figcaption
-							h5 Southgate Tower
-							p Địa chỉ: Quận 7, Hồ Chí Minh
-							p Giá: 
-								span 35 triệu - 36 triệu/m2
-						.status.d-flex
-							.info.d-flex
-								p
-									em.mr-2.fas.fa-expand-arrows-alt
-									| 90m
-									sup 2
-								p
-									em.mr-2.fas.fa-bed
-									| 2
-								p
-									em.mr-2.fas.fa-bath
-									| 2
-							span Xem thêm
-								em.lnr.lnr-arrow-right.ml-2
-			.col-lg-4.col-md-6
-				a.item(href="#")
-					figure
-						.boxzoom
-							img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
-						figcaption
-							h5 Southgate Tower
-							p Địa chỉ: Quận 7, Hồ Chí Minh
-							p Giá: 
-								span 35 triệu - 36 triệu/m2
-						.status.d-flex
-							.info.d-flex
-								p
-									em.mr-2.fas.fa-expand-arrows-alt
-									| 90m
-									sup 2
-								p
-									em.mr-2.fas.fa-bed
-									| 2
-								p
-									em.mr-2.fas.fa-bath
-									| 2
-							span Xem thêm
-								em.lnr.lnr-arrow-right.ml-2
-			.col-lg-4.col-md-6
-				a.item(href="#")
-					figure
-						.boxzoom
-							img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
-						figcaption
-							h5 Southgate Tower
-							p Địa chỉ: Quận 7, Hồ Chí Minh
-							p Giá: 
-								span 35 triệu - 36 triệu/m2
-						.status.d-flex
-							.info.d-flex
-								p
-									em.mr-2.fas.fa-expand-arrows-alt
-									| 90m
-									sup 2
-								p
-									em.mr-2.fas.fa-bed
-									| 2
-								p
-									em.mr-2.fas.fa-bath
-									| 2
-							span Xem thêm
-								em.lnr.lnr-arrow-right.ml-2
-			.col-lg-4.col-md-6
-				a.item(href="#")
-					figure
-						.boxzoom
-							img.img-fluid.w-100(src="./img/antuong/project/project_1.png", alt="")
-						figcaption
-							h5 Southgate Tower
-							p Địa chỉ: Quận 7, Hồ Chí Minh
-							p Giá: 
-								span 35 triệu - 36 triệu/m2
-						.status.d-flex
-							.info.d-flex
-								p
-									em.mr-2.fas.fa-expand-arrows-alt
-									| 90m
-									sup 2
-								p
-									em.mr-2.fas.fa-bed
-									| 2
-								p
-									em.mr-2.fas.fa-bath
-									| 2
-							span Xem thêm
-								em.lnr.lnr-arrow-right.ml-2
+		.select
+			h4.text-uppercase Chọn hướng nhà theo phong thủy
+			.row
+				.col-lg-6.col-xl-3
+					.sl-city(data-mh="select")
+						select
+							option Năm sinh
+				.col-lg-6.col-xl-3
+					.sl-city(data-mh="select")
+						select
+							option Giới tính
+				.col-lg-6.col-xl-3
+					.sl-city(data-mh="select")
+						select
+							option Vui lòng chọn hướng nhà
+				.col-lg-6.col-xl-3.text-center.text-lg-left
+					a.btn.btn-search(href='#' data-mh="select") Xem kết quả
