--- a/templates/_layout/layout.pug
+++ b/templates/_layout/layout.pug
@@ -15,7 +15,7 @@ html(dir='ltr', lang=config.SEO.seo_lang, itemscope, itemtype="http://schema.org
 		meta(name='apple-mobile-web-app-status-bar-style', content=config.SEO.mobile_color)
 		title #{title} - #{config.SEO.cfg_name}
 		if process.argv.slice(3).indexOf('--production') > -1
-			include ../_include/_seo
+			//- include ../_include/_seo
 		block socialmedia
 		<!-- ////////////// CSS Include ////////////// -->
 		include ../_include/_css
