--- a/lib/pagination/p-1/index.sass
+++ b/lib/pagination/p-1/index.sass
@@ -22,7 +22,7 @@
 					align-items: center
 					+fw(700)
 					display: flex
-					color: darken(color-get($mau,den) ,0%)
+					color: lighten(color-get($mau,text-1) ,5%)
 					background: darken(color-get($mau,trang),10%)
 				&.active
 					.page-link
