--- a/lib/sale/s-1/index.sass
+++ b/lib/sale/s-1/index.sass
@@ -46,8 +46,9 @@ section.canhcam-sale-1
 		background-image: -webkit-linear-gradient( 90deg, rgb(255,199,30) 0%, rgb(255,215,95) 100%)
 		background-image: -ms-linear-gradient( 90deg, rgb(255,199,30) 0%, rgb(255,215,95) 100%)
 		color: color-get($mau,text-1)
-		+fz(1.3rem)
+		text-transform: uppercase
+		+fz(1.2rem)
 		+bor-rad(5px)
-		+fw(400)
+		+fw(500)
 		&:hover
 			background: darken(color-get($mau,extra),10%)
