--- a/lib/statistical/s-1/index.pug
+++ b/lib/statistical/s-1/index.pug
@@ -5,15 +5,15 @@ section.canhcam-statistical-1
 				include ../../nav/n-8/statistical.pug
 			.col-lg-9
 				.table-result.mt-5.mt-lg-0
-					h1.antuong-title.upcase.mb-4.mb-lg-5.main báo cáo thống kê
+					h1.antuong-title.upcase.mb-4.main báo cáo thống kê
 					table.table
 						thead
 							tr
 								th(scope="col" width='10%') Ngày yêu cầu
-								th(width='40%') Tên dự án
-								th(width='10%') Hoa hồng
-								th(width='20%') Trạng thái
-								th(width='20%') Ngày thanh toán
+								th(width='30%') Tên dự án
+								th Hoa hồng
+								th Trạng thái
+								th(width='15%') Ngày thanh toán
 						tbody
 							tr
 								th(scope="row") 24/10/1999
