--- a/templates/statistical.pug
+++ b/templates/statistical.pug
@@ -8,6 +8,7 @@ block header
 	include ../lib/header/h-14/index.pug
 block body
 	include ../lib/statistical/s-1/index.pug
+	include ../lib/bonus/b-1/index.pug
 block footer
 	include ../lib/footer/f-1/index.pug
 	include ../lib/footer/f-7/index.pug
